--- a/Client/Pages/Admin/UsersListPage.razor
+++ b/Client/Pages/Admin/UsersListPage.razor
@@ -147,6 +147,7 @@
 
         if (Users == null) {
             Snackbar.Add($"No users found", Severity.Error);
+            return;
         }
 
 
