--- a/Client/Pages/Admin/UsersListPage.razor
+++ b/Client/Pages/Admin/UsersListPage.razor
@@ -53,37 +53,35 @@
         </RowTemplate>
     </MudTable>
 
-    <MudSelect class="ma-10" T="string" Label="SlideDecksPublished" ValueChanged="SelectedSlideDeck">
+    @*<MudSelect class="ma-10" T="string" Label="SlideDecksPublished" ValueChanged="SelectedSlideDeck">
         @if (SlideDeckPrograms != null) {
             foreach (var slideDeck in SlideDeckPrograms) {
                 <MudSelectItem Value="@(slideDeck.Title)" />
             }
         }
-    </MudSelect>
+    </MudSelect>*@
 }
 <MudOverlay Visible="isVisible" DarkBackground="true">
     @if (addProgramAccessToAvatarIsVisible) {
-    <div style="width: 400px; height: 300px;">
-        <MudPaper>
-            <MudContainer MaxWidth="MaxWidth.Small">
-                <MudText Typo="Typo.body2">Add program</MudText>
+        <div style="width: 400px; height: 300px;">
+            <MudPaper class="ma-10 pa-4">
+                <MudContainer MaxWidth="MaxWidth.Small">
+                    <MudText Typo="Typo.body2">Add program</MudText>
 
-                <MudSelect class="ma-10 pa-4" T="string" Label="SlideDecksPublished" ValueChanged="SelectedSlideDeck">
-                    @if (SlideDeckPrograms != null) {
-                        foreach (var slideDeck in SlideDeckPrograms) {
-                            <MudSelectItem Value="@(slideDeck.Title)" />
+                    <MudSelect class="ma-10 pa-4" T="string" Label="SlideDecksPublished" ValueChanged="SelectedSlideDeck">
+                        @if (SlideDeckPrograms != null) {
+                            foreach (var slideDeck in SlideDeckPrograms) {
+                                <MudSelectItem Value="@(slideDeck.Title)" />
+                            }
                         }
-                    }
-                </MudSelect>
-                <MudTextField @bind-Value="AcessComment" Label="Description" Variant="Variant.Text" Lines="5"></MudTextField>
-                <MudButton OnClick="@(() => SaveProgramToUserAvatar())">Save</MudButton>
-            </MudContainer>
-        </MudPaper>
-    </div>
-            
+                    </MudSelect>
+                    <MudTextField @bind-Value="AcessComment" Label="Description" Variant="Variant.Text" Lines="5"></MudTextField>
+                    <MudButton OnClick="@(() => SaveProgramToUserAvatar())">Save</MudButton>
+                    <MudButton OnClick="@(() => CloseOverlay())">Close</MudButton>
+                </MudContainer>
+            </MudPaper>
+        </div>
     } else {
-
-
         <MudPaper>
             <MudText Typo="Typo.body2">@Name</MudText>
             <MudTable Items="@OverlayUser.UserAvatars" Hover="true" Breakpoint="Breakpoint.Sm">
@@ -120,6 +118,7 @@
             <MudButton OnClick="@(() => OpenOverlay(""))">** Close **></MudButton>
         </MudPaper>
     }
+   
 </MudOverlay>
 @code {
     bool isVisible = false;
@@ -226,6 +225,9 @@
         }
 
 
+    }
+    public async void CloseOverlay() {
+        isVisible = !isVisible;
     }
 
     public async void OpenOverlay(string name) {
