active avatar state är en påse bajs

--- a/Client/Components/UserAvatarActiveView.razor
+++ b/Client/Components/UserAvatarActiveView.razor
@@ -1,6 +1,7 @@
 ﻿@using Learning.Shared.DbModels
-@inject Learning.Client.Services.IUserAvatarLocalService UserAvatarLocal
+@*@inject Learning.Client.Services.IUserAvatarLocalService UserAvatarLocal*@
 @inject Learning.Client.Services.IUserAvatarService UserAvatarService
+@*@inject Learning.Client.Services.Auth*@
 @using BlazorState
 @inherits BlazorStateComponent
 @using Learning.Client.Features
@@ -11,7 +12,7 @@
     <MudText Typo="Typo.caption">False</MudText>
 }
 
-@if (ActiveUserAvatarState.UserAvatar != null) {
+@if (LoggedInState.IsLoggedIn && ActiveUserAvatarState.UserAvatar != null) {
     <img src="@ActiveUserAvatarState.UserAvatar.CoverImage" class="width:100%;" />
     <MudText Typo="Typo.caption">@ActiveUserAvatarState.UserAvatar.Name</MudText>
 }
@@ -22,15 +23,22 @@
     ActiveUserAvatarState ActiveUserAvatarState => GetState<ActiveUserAvatarState>();
     //LoggedInState LoggedInState2 => GetState<LoggedInState>();
     LoggedInState lastState;
+    //string lastUsername = string.Empty;
     LoggedInState LoggedInState {
         get {
-            Console.WriteLine("!! loggedInStateCahnge - UserAvatarActiveView");
+
             var state = GetState<LoggedInState>();
-            if (state.IsLoggedIn && lastState?.IsLoggedIn != state.IsLoggedIn) {
-                //GetActiveUserAvatar();
+
+            Console.WriteLine("!! loggedInStateCahnge - UserAvatarActiveView " + state );
+
+            if (state.IsLoggedIn &&
+                //lastState?.IsLoggedIn != state.IsLoggedIn &&
+                lastState?.UserId != state.UserId) {
+                Console.WriteLine("!! loggedInStateCahnge - GetActiveUserAvatar");
                 lastState = state;
+                //lastUsername = state.UserId;
                 Task.Factory.StartNew(GetActiveUserAvatar);
-            }
+            } 
             return state;
         }
     }
@@ -38,12 +46,14 @@
     async Task GetActiveUserAvatar() {
         var response = await UserAvatarService.GetActive();
         if (response.Success) {
+            Console.WriteLine("!! GetActiveUserAvatar - response.Data " + response.Data.Name);
             await Mediator.Send(new ActiveUserAvatarState.ChangeActiveUserAvatarAction { UserAvatar = response.Data });
+            Console.WriteLine("!! GetActiveUserAvatar - ActiveUserAvatarState " + ActiveUserAvatarState.UserAvatar.Name);
         }
     }
 
     protected override Task OnInitializedAsync() {
-        
+
         return base.OnInitializedAsync();
     }
     //[Parameter]
