--- a/Client/Components/SlideDeckView.razor
+++ b/Client/Components/SlideDeckView.razor
@@ -1,18 +1,19 @@
 ﻿@using Learning.Shared.DbModels
 
+@if (SlideDeck != null) {
+    <MudText Typo="Typo.h6">@SlideDeck.Title</MudText>
+    <MudText Typo="Typo.body1">@SlideDeck.Description</MudText>
+    @if (!string.IsNullOrWhiteSpace(SlideDeck.CoverImage)) {
+        <div>
+            <img src="@SlideDeck.CoverImage" class="width:100%;" />
 
-<MudText Typo="Typo.h6">@SlideDeck.Title</MudText>
-<MudText Typo="Typo.body1">@SlideDeck.Description</MudText>
-@if (!string.IsNullOrWhiteSpace(SlideDeck.CoverImage)) {
-    <div>
-        <img src="@SlideDeck.CoverImage" class="width:100%;" />
-
-    </div>
-}
-@if (SlideDeck.Slides != null) {
-    @foreach (var slide in SlideDeck.Slides) {
-        <br />
-        <Learning.Client.Components.SlideView Slide="slide"></Learning.Client.Components.SlideView>
+        </div>
+    }
+    @if (SlideDeck.Slides != null) {
+        @foreach (var slide in SlideDeck.Slides) {
+            <br />
+            <Learning.Client.Components.SlideView Slide="slide"></Learning.Client.Components.SlideView>
+        }
     }
 }
  
