--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -44,9 +44,14 @@ Welcome to your new app.
             using (var ms = imageFile.OpenReadStream(imageFile.Size)) {
                 var content = new MultipartFormDataContent();
                 content.Headers.ContentDisposition = new System.Net.Http.Headers.ContentDispositionHeaderValue("form-data");
-                content.Headers.Add("exercise", "123");
-                
+                content.Headers.Add("ProgramId", "2");
+                //content.Headers.Add("UserAvatarId", "2");
+
                 content.Add(new StreamContent(ms, Convert.ToInt32(imageFile.Size)), imageFile.ContentType, imageFile.Name);
+                content.Add(new StreamContent(ms, Convert.ToInt32(imageFile.Size)), imageFile.ContentType, imageFile.Name);
+                content.Add(new StreamContent(ms, Convert.ToInt32(imageFile.Size)), imageFile.ContentType, imageFile.Name);
+                content.Add(new StreamContent(ms, Convert.ToInt32(imageFile.Size)), imageFile.ContentType, imageFile.Name);
+
                 var response = await _http.PostAsync("api/upload", content);
 
                 Console.WriteLine(response.IsSuccessStatusCode);
