--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -34,6 +34,11 @@
                         <span class="oi oi-list-rich" aria-hidden="true"></span> /admin/usersList
                     </NavLink>
                 </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="/admin/CompletedReviewableProgramPage">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> /admin/review
+                    </NavLink>
+                </li>
             </Authorized>
         </AuthorizeView>
         <AuthorizeView Roles="Admin, ContentCreator">
