detail view of reviewable blob Sas

--- a/Client/Pages/Admin/CompletedReviewableProgramPage.razor
+++ b/Client/Pages/Admin/CompletedReviewableProgramPage.razor
@@ -21,7 +21,7 @@
             <MudTd>@context.UserAvatarId</MudTd>
             <MudTd>
                 <MudButton OnClick="@(() => NavigationManager.
-                                      NavigateTo($"admin/CompletedReviewableProgramViewPage/{context.CompletedSlideDeckProgramId}/{context.UserAvatarId}/{context.Id}"))">View></MudButton>
+                                      NavigateTo($"admin/CompletedReviewableProgramViewPage/{context.Id}"))">View></MudButton>
             </MudTd>
         </RowTemplate>
     </MudTable>
